--- a/libs/store/feature-game-detail/project.json
+++ b/libs/store/feature-game-detail/project.json
@@ -30,5 +30,6 @@
       }
     }
   },
-  "tags": ["scope:shared", "type:lib"]
+  "tags": ["scope:store", "type:feature"],
+  "implicitDependencies": []
 }
