--- a/libs/store/util-formatters/project.json
+++ b/libs/store/util-formatters/project.json
@@ -26,5 +26,6 @@
       }
     }
   },
-  "tags": ["scope:shared", "type:lib"]
+  "tags": ["scope:store", "type:util"],
+  "implicitDependencies": []
 }
