--- a/libs/store/ui-shared/project.json
+++ b/libs/store/ui-shared/project.json
@@ -59,5 +59,6 @@
       }
     }
   },
-  "tags": ["scope:shared", "type:lib"]
+  "tags": ["scope:store", "type:ui"],
+  "implicitDependencies": []
 }
